<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_gray"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ask_answer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_margin="@dimen/edit_margin"
        android:maxLength="500"
        android:background="@drawable/bg_rectangle_map2"
        android:hint="@string/answerhint"
        android:gravity="left|top"
        android:textColor="@color/textcolor3"
        android:padding="@dimen/edit_padding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginBottom="@dimen/edit_margin"
        android:layout_marginRight="@dimen/edit_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/textnum"
            android:paddingLeft="@dimen/edit_padding"
            android:id="@+id/text_num"
            android:gravity="center"
            style="@style/textstyle3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/edit_margin" 
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
			android:paddingBottom="9dp"            
            android:paddingTop="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:text="@string/pefect_data_submit"
            android:textColor="@color/textcolor3"
            android:id="@+id/submit"
            android:textSize="@dimen/textsize3"
            android:background="@drawable/submit_button" />
    </RelativeLayout>

</LinearLayout>