<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:id="@+id/main"
    android:orientation="vertical" >
    
	<RelativeLayout 
         android:layout_width="match_parent"
    	 android:layout_height="@dimen/top_bar_height"
         android:background="#ffffff"
        >
        
        <TextView 
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_bother_title"
            android:textSize="@dimen/top_title_textsize"
            android:textColor="#333333"
            android:layout_centerInParent="true"
            />
        
        <ImageView 
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/icon_back2"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_tab"
            />
    </RelativeLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_view_color"
        />
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/background_white"
        android:layout_marginTop="@dimen/mine_each_top"
        >
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/time_not_bother"
        	android:textSize="@dimen/tvsize16"
        	android:gravity="center"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="@dimen/bother_text_left"
            />
        
        <com.tuanche.askforanswer.source.view.SwitchButton 
            android:id="@+id/switch_bother_button"
       		style="@style/SwitchButtonStyle"
       		android:layout_centerVertical="true"
       		android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>
    <View 
            android:layout_width="fill_parent"
       		 android:layout_height="1dip"
       		 android:background="@color/line_view_color"
            />
    <RelativeLayout 
        android:id="@+id/time_not_show"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/background_white"
        >
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/time_select"
        	android:textSize="@dimen/tvsize16"
        	android:gravity="center"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="@dimen/bother_text_left"
            />
        
         <TextView
             android:id="@+id/time_select_show" 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/time_during"
        	android:textSize="@dimen/tvsize14"
        	android:gravity="center"
        	android:layout_centerVertical="true"
        	android:layout_alignParentRight="true"
        	android:layout_marginRight="@dimen/bother_text_right"
        	android:textColor="@color/not_click_color"
            />
         
          <ImageView 
                android:layout_width="wrap_content"
    	  	    android:layout_height="wrap_content"
                android:src="@drawable/btn_right_jian"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/pading_left"
                />
                
    </RelativeLayout>
    
         	
</LinearLayout>
